--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.battery.battery.com.battery.bms.MainActivity">
+    tools:context="com.battery.bms.MainActivity">
 
-    <TextView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <!--<Button-->
+        <!--android:id="@+id/btn_reset_all"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="重置" />-->
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-    />
+        android:layout_gravity="center"
+        android:orientation="horizontal">
 
-</android.support.constraint.ConstraintLayout>
+    <com.littlejie.circleprogress.DialProgress
+        android:id="@+id/dial_progress_bar"
+        android:layout_width="210dp"
+        android:layout_height="210dp"
+        android:layout_gravity="center_horizontal"
+        android:padding="@dimen/medium"
+        app:animTime="1000"
+        app:arcColors="@array/gradient_arc_color"
+        app:arcWidth="@dimen/large"
+        app:dialIntervalDegree="3"
+        app:dialWidth="2dp"
+        app:hint="当前时速"
+        app:hintSize="@dimen/text_size_20"
+        app:maxValue="100"
+        app:startAngle="135"
+        app:sweepAngle="270"
+        app:unit="km/h"
+        app:unitSize="@dimen/text_size_20"
+        app:value="300"
+        app:valueSize="@dimen/text_size_20" />
+
+        <com.littlejie.circleprogress.WaveProgress
+            android:id="@+id/wave_progress_bar"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="30dp"
+            app:darkWaveAnimTime="1000"
+            app:darkWaveColor="@color/dark"
+            app:lightWaveAnimTime="2000"
+            app:lightWaveColor="@color/light"
+            app:lightWaveDirect="R2L"
+            app:hint="电量"
+            app:hintSize="@dimen/text_size_20"
+            app:lockWave="false"
+            app:valueSize="@dimen/text_size_25"
+            app:waveHeight="30dp"
+            app:waveNum="1" />
+
+    </LinearLayout>
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal">
+
+           <TextView
+               android:id="@+id/current_mileage"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginLeft="30dp"
+               android:textColor="@color/blue"
+               android:text="本次里程：100km"
+               />
+
+
+           <TextView
+               android:id="@+id/total_mileage"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginLeft="40dp"
+               android:textColor="@color/red"
+               android:text="总计里程：100km"
+               />
+       </LinearLayout>
+
+        <TableLayout
+            android:id="@+id/TableLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:stretchColumns="1" >
+
+            <TableRow
+                android:layout_weight="1"
+                android:layout_height="0dp"
+                android:layout_width="match_parent"
+                >
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:text="one" />
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:text="two" />
+
+
+            </TableRow>
+
+            <TableRow
+                android:layout_weight="1"
+                android:layout_height="0dp"
+                android:layout_width="match_parent">
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:text="one" />
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:text="two" />
+
+
+            </TableRow>
+
+        </TableLayout>
+
+    </LinearLayout>
+</ScrollView>
