--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,58 +89,56 @@
                />
        </LinearLayout>
 
-        <TableLayout
-            android:id="@+id/TableLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:stretchColumns="1" >
 
-            <TableRow
-                android:layout_weight="1"
-                android:layout_height="0dp"
-                android:layout_width="match_parent"
-                >
+      <LinearLayout
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/wdcl_open"
-                    android:text="one" />
+          android:layout_marginTop="20dp"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:gravity="center"
+          android:orientation="horizontal">
 
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/cyjz"
-                     />
+        <ImageButton
+            android:id="@+id/wdcl"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/wdcl_open"
+        android:text="one" />
 
-
-            </TableRow>
-
-            <TableRow
-                android:layout_weight="1"
-                android:layout_height="0dp"
-                android:layout_width="match_parent">
-
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/sszt"
-                     />
-
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/csxg"
-                    android:text="two" />
+        <ImageButton
+            android:id="@+id/cyjz"
+            android:layout_marginLeft="20dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+        android:background="@drawable/cyjz"
+        />
+      </LinearLayout>
 
 
-            </TableRow>
+      <LinearLayout
 
-        </TableLayout>
+          android:layout_marginTop="10dp"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:gravity="center"
+          android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/sszt"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:background="@drawable/sszt"
+            android:text="one" />
+
+        <ImageButton
+            android:id="@+id/csxg"
+            android:layout_marginLeft="20dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:background="@drawable/csxg"
+        />
+      </LinearLayout>
+      
 
     </LinearLayout>
 </ScrollView>
