--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,127 +18,171 @@
         <!--android:layout_height="wrap_content"-->
         <!--android:text="重置" />-->
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
 
-    <com.littlejie.circleprogress.DialProgress
-        android:id="@+id/dial_progress_bar"
-        android:layout_width="210dp"
-        android:layout_height="210dp"
-        android:layout_gravity="center_horizontal"
-        android:padding="@dimen/medium"
-        app:animTime="1000"
-        app:arcColors="@array/gradient_arc_color"
-        app:arcWidth="@dimen/large"
-        app:dialIntervalDegree="3"
-        app:dialWidth="2dp"
-        app:hint="当前时速"
-        app:hintSize="@dimen/text_size_20"
-        app:maxValue="100"
-        app:startAngle="135"
-        app:sweepAngle="270"
-        app:unit="km/h"
-        app:unitSize="@dimen/text_size_20"
-        app:value="300"
-        app:valueSize="@dimen/text_size_20" />
+            <com.littlejie.circleprogress.DialProgress
+                android:id="@+id/dial_progress_bar"
+                android:layout_width="210dp"
+                android:layout_height="210dp"
+                android:layout_gravity="center_horizontal"
+                android:padding="@dimen/medium"
+                app:animTime="1000"
+                app:arcColors="@array/gradient_arc_color"
+                app:arcWidth="@dimen/large"
+                app:dialIntervalDegree="3"
+                app:dialWidth="2dp"
+                app:hint="当前时速"
+                app:hintSize="@dimen/text_size_20"
+                app:maxValue="100"
+                app:startAngle="135"
+                app:sweepAngle="270"
+                app:unit="km/h"
+                app:unitSize="@dimen/text_size_20"
+                app:value="300"
+                app:valueSize="@dimen/text_size_20" />
 
-        <com.littlejie.circleprogress.WaveProgress
-            android:id="@+id/wave_progress_bar"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="30dp"
-            app:darkWaveAnimTime="1000"
-            app:darkWaveColor="@color/dark"
-            app:lightWaveAnimTime="2000"
-            app:lightWaveColor="@color/light"
-            app:lightWaveDirect="R2L"
-            app:hint="电量"
-            app:hintSize="@dimen/text_size_20"
-            app:lockWave="false"
-            app:valueSize="@dimen/text_size_25"
-            app:waveHeight="30dp"
-            app:waveNum="1" />
+            <com.littlejie.circleprogress.WaveProgress
+                android:id="@+id/wave_progress_bar"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="30dp"
+                app:darkWaveAnimTime="1000"
+                app:darkWaveColor="@color/dark"
+                app:hint="电量"
+                app:hintSize="@dimen/text_size_20"
+                app:lightWaveAnimTime="2000"
+                app:lightWaveColor="@color/light"
+                app:lightWaveDirect="R2L"
+                app:lockWave="false"
+                app:valueSize="@dimen/text_size_25"
+                app:waveHeight="30dp"
+                app:waveNum="1" />
 
-    </LinearLayout>
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="horizontal">
+        </LinearLayout>
 
-           <TextView
-               android:id="@+id/current_mileage"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_marginLeft="30dp"
-               android:textColor="@color/blue"
-               android:text="本次里程：100km"
-               />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-
-           <TextView
-               android:id="@+id/total_mileage"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_marginLeft="40dp"
-               android:textColor="@color/red"
-               android:text="总计里程：100km"
-               />
-       </LinearLayout>
+            <TextView
+                android:id="@+id/current_mileage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:text="本次里程：100km"
+                android:textColor="@color/blue" />
 
 
-      <LinearLayout
-
-          android:layout_marginTop="20dp"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:gravity="center"
-          android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/wdcl"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:background="@drawable/wdcl_open"
-        android:text="one" />
-
-        <ImageButton
-            android:id="@+id/cyjz"
-            android:layout_marginLeft="20dp"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-        android:background="@drawable/cyjz"
-        />
-      </LinearLayout>
+            <TextView
+                android:id="@+id/total_mileage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:text="总计里程：100km"
+                android:textColor="@color/red" />
+        </LinearLayout>
 
 
-      <LinearLayout
+        <LinearLayout
 
-          android:layout_marginTop="10dp"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:gravity="center"
-          android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/sszt"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:background="@drawable/sszt"
-            android:text="one" />
+            <LinearLayout
 
-        <ImageButton
-            android:id="@+id/csxg"
-            android:layout_marginLeft="20dp"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:background="@drawable/csxg"
-        />
-      </LinearLayout>
-      
+                android:id="@+id/wdcl"
+                android:layout_width="145dp"
+                android:layout_height="145dp"
+                android:background="@drawable/wdcl_open"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="我的车辆"
+                    android:textColor="@color/white"
+                    android:layout_marginLeft="22dp"
+                    android:layout_marginTop="20dp"
+                    android:textSize="25sp" />
+
+                <Switch
+                    android:id="@+id/switch_button"
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginLeft="45dp"
+                    android:showText="true"
+                    android:switchTextAppearance="@style/SwitchTheme"
+                    android:textOff="关"
+                    android:textOn="开"
+                    android:thumb="@drawable/switch_rectangle_thumb_selector"
+                    android:track="@drawable/switch_rectangle_track" />
+
+
+
+            </LinearLayout>
+
+
+            <ImageButton
+                android:id="@+id/cyjz"
+                android:layout_width="145dp"
+                android:layout_height="145dp"
+                android:layout_marginLeft="20dp"
+                android:background="@drawable/cyjz" />
+        </LinearLayout>
+
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/sszt"
+                android:layout_width="145dp"
+                android:layout_height="145dp"
+                android:background="@drawable/sszt"
+                android:orientation="vertical"
+                 >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="日期"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="90dp"
+                    android:layout_marginLeft="20dp"
+                    />
+                <TextView
+                    android:id="@+id/tv_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:text="2018/12/19"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginLeft="20dp"
+                    />
+            </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/csxg"
+                android:layout_width="145dp"
+                android:layout_height="145dp"
+                android:layout_marginLeft="20dp"
+                android:background="@drawable/csxg" />
+        </LinearLayout>
+
 
     </LinearLayout>
 </ScrollView>
