--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="white">#FFFFFF</color>
+    
     <color name="dark">#803cbcb7</color>
     <color name="light">#800de6e8</color>
     <color name="my_dark">#000000</color>
