--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.battery.bms.MainActivity">
+    tools:context="com.battery.bms.activity.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
