--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="white">#FFFFFF</color>
+    <color name="mygreen">#1db2a1</color>
     
     <color name="dark">#803cbcb7</color>
     <color name="light">#800de6e8</color>
