--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -154,6 +154,7 @@
                 android:layout_width="145dp"
                 android:layout_height="145dp"
                 android:background="@drawable/sszt"
+                android:clickable="true"
                 android:orientation="vertical"
                  >
                 <TextView
