--- a/app/src/main/res/layout/activity_current_state.xml
+++ b/app/src/main/res/layout/activity_current_state.xml
@@ -66,9 +66,10 @@
             android:layout_height="wrap_content"
             android:textSize="15dp"
             android:textColor="@color/mygreen"
-            android:text="AUDI"/>
+            android:text="总电压"/>
 
         <TextView
+            android:id="@+id/tv_PackVoltage"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -76,6 +77,7 @@
             android:textColor="@color/white"
             android:text="6928.8700"/>
         <EditText
+            android:id="@+id/et_PackVoltage"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
