第一次完成后

--- a/app/src/main/res/layout/activity_sampling_calibration.xml
+++ b/app/src/main/res/layout/activity_sampling_calibration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.battery.bms.activity.CurrentState">
+    tools:context="com.battery.bms.activity.CurrentStateActivity">
 
 
     <LinearLayout
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="参数修改"
+            android:text="采样校准"
             android:textColor="@color/white"
             android:textSize="25dp"
             android:textStyle="bold" />
