--- a/app/src/main/res/layout/activity_parameter_repair.xml
+++ b/app/src/main/res/layout/activity_parameter_repair.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.battery.bms.activity.CurrentState">
+    tools:context="com.battery.bms.activity.CurrentStateActivity">
 
 
     <LinearLayout
@@ -653,7 +653,7 @@
             android:layout_gravity="center"
             android:background="@color/mygreen"
             android:layout_marginBottom="10dp"
-            android:text="确认修改" />
+            android:text="确认校准" />
     </LinearLayout>
 
 
